--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -636,7 +636,7 @@
       <td>AIESEC</td>
       <td>国际经济学商学学生联合会国际基金会</td>
       <td>Canada</td>
-      <td>"Small Footprints" Program for the Future</td>
+      <td>“Small Footprints” Program for the Future</td>
       <td>“微迹”未来项目</td>
       <td>Shanghai City / Beijing City / Guangdong Province / Tianjin City / Shandong Province / Zhejiang Province / Jiangsu Province / Sichuan Province</td>
       <td>上海市,北京市,广东省,天津市,山东省,浙江省,江苏省,四川省</td>
@@ -8964,6 +8964,23 @@
     </tr>
     <tr>
       <td>Consortium of Legal Persons Cuizhongxian Academy</td>
+      <td>财团法人崔忠贤学术院</td>
+      <td>South Korea</td>
+      <td>Chinese Academy of Social Sciences Asian Research Center Acceptance of Foreign Aid</td>
+      <td>中国社会科学院亚洲研究中心接受境外资助</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education</td>
+      <td>2020-09-30</td>
+      <td>2020-12-31</td>
+      <td>Institute of European Studies of the Chinese Academy of Social Sciences</td>
+      <td>中国社会科学院亚洲研究中心</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Consortium of Legal Persons Cuizhongxian Academy</td>
       <td>财团法人崔鈡贤学术院</td>
       <td>South Korea</td>
       <td>2019 Tianjin Symposium and Donations for Expenses</td>
@@ -9010,23 +9027,6 @@
       <td>Nankai University Zhou Enlai School of Government</td>
       <td>周恩来政府管理学院</td>
       <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Consortium of Legal Persons Cuizhongxian Academy</td>
-      <td>财团法人崔忠贤学术院</td>
-      <td>South Korea</td>
-      <td>Chinese Academy of Social Sciences Asian Research Center Acceptance of Foreign Aid</td>
-      <td>中国社会科学院亚洲研究中心接受境外资助</td>
-      <td>Beijing City</td>
-      <td>北京市</td>
-      <td>Education</td>
-      <td>2020-09-30</td>
-      <td>2020-12-31</td>
-      <td>Institute of European Studies of the Chinese Academy of Social Sciences</td>
-      <td>中国社会科学院亚洲研究中心</td>
-      <td>Think Tank or Research Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -14593,6 +14593,23 @@
       <td>Grace Charity Foundation Limited</td>
       <td>慈恩基金会有限公司</td>
       <td>Hong Kong</td>
+      <td>Financial Aid for University Students in Gansu Province, Huining County</td>
+      <td>甘肃省会宁县大学生资助</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-09-21</td>
+      <td>2021-08-30</td>
+      <td>Gansu Province People's Government Foreign Affairs Office Exchange and Cooperation Division</td>
+      <td>甘肃省人民政府外事办公室交流合作处（港澳事务处）</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
       <td>Gansu Province Student Financial Aid for Impoverished Regions</td>
       <td>甘肃省贫困地区助学活动</td>
       <td>Gansu Province</td>
@@ -17543,23 +17560,6 @@
       <td>2019-10-31</td>
       <td>Gansu Province, Dingxi City, Lintao County, Lian'erwan People's Government</td>
       <td>甘肃省定西市临洮县连儿湾乡人民政府</td>
-      <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Grace Charity Foundation Limited</td>
-      <td>慈恩基金会有限公司</td>
-      <td>Hong Kong</td>
-      <td>Financial Aid for University Students in Gansu Province, Huining County</td>
-      <td>甘肃省会宁县大学生资助</td>
-      <td>Gansu Province</td>
-      <td>甘肃省</td>
-      <td>Education, Poverty Alleviation</td>
-      <td>2020-09-21</td>
-      <td>2021-08-30</td>
-      <td>Gansu Province People's Government Foreign Affairs Office Exchange and Cooperation Division</td>
-      <td>甘肃省人民政府外事办公室交流合作处（港澳事务处）</td>
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -35687,6 +35687,40 @@
       <td>直接登记</td>
     </tr>
     <tr>
+      <td>Raoul Wallenberg Institute of Human Rights and Humanitarian Law (RWI)</td>
+      <td>罗尔·瓦伦堡人权与人道法研究所</td>
+      <td>Sweden</td>
+      <td>Publication Activities for "The Role of Social Work in Juevenile Justice" Compendium</td>
+      <td>《社会工作在少年司法工作中的作用》论文集出版活动</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Law and Governance, Youth</td>
+      <td>2019-05-27</td>
+      <td>2020-04-12</td>
+      <td>Beijing Youth Social Work Research Institute</td>
+      <td>北京青少年社会工作研究院</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Raoul Wallenberg Institute of Human Rights and Humanitarian Law (RWI)</td>
+      <td>罗尔·瓦伦堡人权与人道法研究所</td>
+      <td>Sweden</td>
+      <td>2020 Human Rights Education Research Program</td>
+      <td>2020年人权教学研究项目</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education</td>
+      <td>2020-05-01</td>
+      <td>2021-04-30</td>
+      <td>Peking University Law School</td>
+      <td>北京大学法学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Ren Feng Dong Hu Charitable Fund</td>
       <td>仁枫洞护慈基金</td>
       <td>Unknown</td>
@@ -35855,40 +35889,6 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Commerce</td>
       <td>商务部</td>
-    </tr>
-    <tr>
-      <td>Robert Bosch Stiftung</td>
-      <td>罗尔·瓦伦堡人权与人道法研究所</td>
-      <td>Germany</td>
-      <td>Publication Activities for "The Role of Social Work in Juevenile Justice" Compendium</td>
-      <td>《社会工作在少年司法工作中的作用》论文集出版活动</td>
-      <td>Beijing City</td>
-      <td>北京市</td>
-      <td>Law and Governance, Youth</td>
-      <td>2019-05-27</td>
-      <td>2020-04-12</td>
-      <td>Beijing Youth Social Work Research Institute</td>
-      <td>北京青少年社会工作研究院</td>
-      <td>Think Tank or Research Institution</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Robert Bosch Stiftung</td>
-      <td>罗尔·瓦伦堡人权与人道法研究所</td>
-      <td>Germany</td>
-      <td>2020 Human Rights Education Research Program</td>
-      <td>2020年人权教学研究项目</td>
-      <td>Beijing City</td>
-      <td>北京市</td>
-      <td>Education</td>
-      <td>2020-05-01</td>
-      <td>2021-04-30</td>
-      <td>Peking University Law School</td>
-      <td>北京大学法学院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Rockefeller Brothers Fund</td>
@@ -38835,6 +38835,23 @@
       <td>Sun Hung Kai Properties - Kwoks’ Foundation Limited</td>
       <td>新鸿基地产郭氏基金有限公司</td>
       <td>Hong Kong</td>
+      <td>Nanjing University Student Financial Aid</td>
+      <td>新鸿基地产郭氏基金东南大学奖助学金</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-09-06</td>
+      <td>2021-09-05</td>
+      <td>Southeast University Education Foundation</td>
+      <td>东南大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>Sun Hung Kai Properties - Kwoks’ Foundation Limited</td>
+      <td>新鸿基地产郭氏基金有限公司</td>
+      <td>Hong Kong</td>
       <td>Contract Signing Ceremony with Southwest University and Acceptance of Aid</td>
       <td>香港新鸿基地产郭氏基金向西南大学捐赠签约仪式及受助</td>
       <td>Chongqing City</td>
@@ -38949,23 +38966,6 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
-    </tr>
-    <tr>
-      <td>Sun Hung Kai Properties - Kwoks’ Foundation Limited</td>
-      <td>新鸿基地产郭氏基金有限公司</td>
-      <td>Hong Kong</td>
-      <td>Nanjing University Student Financial Aid</td>
-      <td>新鸿基地产郭氏基金东南大学奖助学金</td>
-      <td>Jiangsu Province</td>
-      <td>江苏省</td>
-      <td>Education, Poverty Alleviation</td>
-      <td>2020-09-06</td>
-      <td>2021-09-05</td>
-      <td>Southeast University Education Foundation</td>
-      <td>东南大学教育基金会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Jiangsu Department of Education</td>
-      <td>江苏省教育厅</td>
     </tr>
     <tr>
       <td>Sun Hung Kai Properties—Kwoks’ Foundation Limited</td>
@@ -41436,6 +41436,40 @@
       <td>The Hong Kong Yue Clansman Association</td>
       <td>香港余氏宗亲会</td>
       <td>Hong Kong</td>
+      <td>Teacher Condolences Contribution</td>
+      <td>香港余氏宗亲会教师慰问金捐赠活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education</td>
+      <td>2020-09-25</td>
+      <td>2020-09-26</td>
+      <td>Taishan City Wuxi Middle School</td>
+      <td>台山市武溪中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>The Hong Kong Yue Clansman Association</td>
+      <td>香港余氏宗亲会</td>
+      <td>Hong Kong</td>
+      <td>Donations for the Cost of School Security Program</td>
+      <td>香港余氏宗亲会捐赠学校安全建设项目工程费用</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Infrastructure</td>
+      <td>2020-09-25</td>
+      <td>2020-12-31</td>
+      <td>Taishan City Wuxi Middle School</td>
+      <td>台山市武溪中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>The Hong Kong Yue Clansman Association</td>
+      <td>香港余氏宗亲会</td>
+      <td>Hong Kong</td>
       <td>Contribution of Operating Funds for Xinning Magazine</td>
       <td>香港余氏宗亲会捐赠新宁杂志经费活动</td>
       <td>Guangdong Province</td>
@@ -41531,40 +41565,6 @@
       <td>Taishan City, Taicheng Street, Guishui Village Residents Committee</td>
       <td>台山市台城街道桂水村民委员会</td>
       <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>The Hong Kong Yue Clansman Association</td>
-      <td>香港余氏宗亲会</td>
-      <td>Hong Kong</td>
-      <td>Teacher Condolences Contribution</td>
-      <td>香港余氏宗亲会教师慰问金捐赠活动</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Education</td>
-      <td>2020-09-25</td>
-      <td>2020-09-26</td>
-      <td>Taishan City Wuxi Middle School</td>
-      <td>台山市武溪中学</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>The Hong Kong Yue Clansman Association</td>
-      <td>香港余氏宗亲会</td>
-      <td>Hong Kong</td>
-      <td>Donations for the Cost of School Security Program</td>
-      <td>香港余氏宗亲会捐赠学校安全建设项目工程费用</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Education, Infrastructure</td>
-      <td>2020-09-25</td>
-      <td>2020-12-31</td>
-      <td>Taishan City Wuxi Middle School</td>
-      <td>台山市武溪中学</td>
-      <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -50339,6 +50339,210 @@
       <td>Unknown</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Lee and Li Foundation</td>
+      <td>财团法人理律文教基金会</td>
+      <td>Taiwan</td>
+      <td>2020 “Lee and Li Trophy” Model Court Competition and Scholarship Presentation</td>
+      <td>2020年“理律杯”模拟法庭竞赛活动及奖学金颁发</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education, Law and Governance</td>
+      <td>2020-11-15</td>
+      <td>2021-11-14</td>
+      <td>Tsinghua University School of Law</td>
+      <td>清华大学法学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Leona M. and Harry B. Helmsley Charitable Trust</td>
+      <td>利昂娜与哈里·赫尔姆斯利慈善信托</td>
+      <td>United States</td>
+      <td>Research into the Relationship between Gut Microbiome Changes and Onset of Crohn’s Disease</td>
+      <td>肠道微生物组改变与克罗恩病发病关系的研究</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Health, Science and Technology</td>
+      <td>2020-10-07</td>
+      <td>2021-03-31</td>
+      <td>The First Affiliated Hospital Research Department, Sun Yat-sen University</td>
+      <td>中山大学附属第一医院科研与学科建设处</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Lui Che-woo Charitable Foundation</td>
+      <td>吕志和慈善基金</td>
+      <td>United States</td>
+      <td>Tsinghua University Lui Che-woo Building Project - Continuation</td>
+      <td>清华大学吕志和楼项目-延续</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education, Infrastructure</td>
+      <td>2020-10-01</td>
+      <td>2021-09-30</td>
+      <td>Tsinghua University Education Foundation</td>
+      <td>清华大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Pui Ching Fung Ze C. W. Chang Memorial Foundation</td>
+      <td>培正锋社张振文纪念基金会</td>
+      <td>Australia</td>
+      <td>2020 Yunnan Project Hope Cangyuan County Ethnic Minority Middle School “Cultivating the Foundation Hope Class”</td>
+      <td>2020云南希望工程沧源民族中学“培基希望班”</td>
+      <td>Yunnan Province</td>
+      <td>云南省</td>
+      <td>Education, Ethnic Affairs, Youth</td>
+      <td>2020-09-26</td>
+      <td>2021-09-26</td>
+      <td>Yunnan Youth Development Foundation</td>
+      <td>云南省青少年发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Yunnan Province Communist Youth League Committee</td>
+      <td>共青团云南省委</td>
+    </tr>
+    <tr>
+      <td>Raoul Wallenberg Institute of Human Rights and Humanitarian Law (RWI)</td>
+      <td>拉乌尔·瓦伦堡人权与人道法研究所基金会</td>
+      <td>Sweden</td>
+      <td>Discussion Program on Equality and Social Integration for Those with Disabilities</td>
+      <td>残障人平等参与及社会融合研讨项目</td>
+      <td>Hubei Province</td>
+      <td>湖北省</td>
+      <td>Disabilities</td>
+      <td>2020-10-15</td>
+      <td>2020-12-31</td>
+      <td>Wuhan East-Lake Institute for Social Advancement (EISA)</td>
+      <td>武汉市武昌区东湖公益服务中心</td>
+      <td>Non-profit or Foundation</td>
+      <td>Wuchang District Bureau of Civil Affairs</td>
+      <td>直接登记</td>
+    </tr>
+    <tr>
+      <td>Taishan No. 1 Middle School Macau Alumni Association</td>
+      <td>台山一中澳门校友会</td>
+      <td>Macau</td>
+      <td>Taishan No. 1 Middle School Macau Alumni Association Scholarship Ceremony</td>
+      <td>台山一中澳门校友会奖学金颁发活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Youth</td>
+      <td>2020-09-30</td>
+      <td>2020-09-30</td>
+      <td>Taishan City No. 1 Middle School</td>
+      <td>台山市第一中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>The Cat Fanciers' Association</td>
+      <td>爱猫者协会</td>
+      <td>United States</td>
+      <td>CFA China Adorable Cats Touring Exhibition</td>
+      <td>CFA中国萌猫巡回展</td>
+      <td>Chongqing City</td>
+      <td>重庆市</td>
+      <td>Unknown</td>
+      <td>2020-10-24</td>
+      <td>2020-11-23</td>
+      <td>Chonging City, Jiulongpo District Yupin Culture Service Center</td>
+      <td>重庆市九龙坡区渝品文化服务中心</td>
+      <td>Non-profit or Foundation</td>
+      <td>Chonging City, Jiulongpo District Commission of Culture and Tourism Development</td>
+      <td>重庆市九龙坡区文化和旅游发展委员会</td>
+    </tr>
+    <tr>
+      <td>Toi Shan Association of Hong Kong Charitable Foundation Limited</td>
+      <td>香港台山商会慈善机构有限公司</td>
+      <td>Hong Kong</td>
+      <td>Taishan City 2020 College Entrance Examination Student Financial Aid and Talent Cultivation Activity</td>
+      <td>台山市2020年高考助学培优活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2020-09-30</td>
+      <td>2020-09-30</td>
+      <td>Taishan Charity Federation</td>
+      <td>台山市教育局</td>
+      <td>Non-profit or Foundation</td>
+      <td>Taishan City Bureau of Civil Affairs</td>
+      <td>台山市民政局</td>
+    </tr>
+    <tr>
+      <td>Toi Shan Association of Hong Kong Charitable Foundation Limited</td>
+      <td>香港台山商会慈善机构有限公司</td>
+      <td>Hong Kong</td>
+      <td>Taishan City 2020 Teaching Award and Scholarship Award Ceremony</td>
+      <td>台山市2020年奖教奖学活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education</td>
+      <td>2020-09-30</td>
+      <td>2020-09-30</td>
+      <td>Taishan Charity Federation</td>
+      <td>台山市教育局</td>
+      <td>Non-profit or Foundation</td>
+      <td>Taishan City Bureau of Civil Affairs</td>
+      <td>台山市民政局</td>
+    </tr>
+    <tr>
+      <td>Tseng Hin Pei Charity Fund Limited</td>
+      <td>曾宪备慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Fuzhi Fangzhou Social Practicum Activity (2020-2021 School Year)</td>
+      <td>甫智方舟社会实践活动（2020-2021学年）</td>
+      <td>Beijing City / Shaanxi Province / Guangdong Province / Hebei Province / Henan Province</td>
+      <td>北京市,陕西省,广东省,河北省,河南省</td>
+      <td>Education, Youth</td>
+      <td>2020-09-25</td>
+      <td>2021-09-25</td>
+      <td>Tsinghua University High School Education Foundation</td>
+      <td>北京市清华大学附属中学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Wu Wei Harmony Foundation</td>
+      <td>无为和谐基金会</td>
+      <td>United States</td>
+      <td>Yilong County Rural Elementary Schools Distance Learning Program</td>
+      <td>仪陇县乡村小学远程教育项目</td>
+      <td>Sichuan Province</td>
+      <td>四川省</td>
+      <td>Education, Rural Issues/Development</td>
+      <td>2020-09-20</td>
+      <td>2021-08-31</td>
+      <td>Yilong County Rural Development Association</td>
+      <td>仪陇县乡村发展协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Yilong County Bureau of Poverty Alleviation and Migration</td>
+      <td>仪陇县扶贫移民局</td>
+    </tr>
+    <tr>
+      <td>Chan Meng Kam Foundation</td>
+      <td>陈明金基金会</td>
+      <td>Macau</td>
+      <td>Patriotic Organizations Supporting the Fight Against the Novel Coronavirus Epidemic</td>
+      <td>爱国组织支援抗击新型冠状病毒疫情</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-02-01</td>
+      <td>2020-04-27</td>
+      <td>Tianxingjian Charitable Foundation (Guangdong)</td>
+      <td>广东省天行健慈善基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>广东省人民政府相关职能部门</td>
     </tr>
   </tbody>
 </table>
