--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1486,6 +1486,17 @@
       <td>Beijing, Heilongjiang, Jilin, Liaoning, Shandong</td>
     </tr>
     <tr>
+      <td>Danish Agriculture and Food Council</td>
+      <td>丹麦农业和食品委员会</td>
+      <td>Shanghai Administration of Market Regulation</td>
+      <td>上海市市场监督管理局</td>
+      <td>Denmark</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-10-09</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Danish Export Association</td>
       <td>丹麦出口协会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -1568,7 +1579,7 @@
       <td>Liaoning Department of Education</td>
       <td>辽宁省教育厅</td>
       <td>Japan</td>
-      <td>Education, International Relations/Exchange</td>
+      <td>Education, Health, International Relations/Exchange</td>
       <td>Liaoning</td>
       <td>2020-07-02</td>
       <td>Liaoning</td>
@@ -4434,7 +4445,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Peter the Great Saint-Petersburg Polytechnic University (Science and Technology Center)</td>
+      <td>Peter the Great St. Petersburg Polytechnic University Joint Science and Technology Institute</td>
       <td>俄罗斯圣彼得堡彼得大帝理工大学（科技中心）</td>
       <td>Shanghai Commission of Science and Technology</td>
       <td>上海市科学技术委员会</td>
