--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_brown.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_brown.html
@@ -101,7 +101,7 @@
 }
 
 	.leaflet-marker-icon{
-		opacity: 0.7;
+		opacity: 0.75;
 	}
 
 /* this is to deal with the weird tile gapping: https://github.com/Leaflet/Leaflet/issues/3575 */
@@ -137,16 +137,16 @@
 
 		.all {}
 		.all:hover {
-			background-color: #b2cace;
-			color: black;
+			background-color: #9a9179;
+			color: white;
 			border: none;
 		}
 
 		/* https://stackoverflow.com/a/44264124/7841877 */
 		button:focus{
-			background-color:#b2cace;
+			background-color:#9a9179;
 			outline: none;
-			color: black;
+			color: white;
 		}
 
 
@@ -406,8 +406,8 @@
 	});
 
 
-	var Icon_red = new CameraIcon({iconUrl: 'foreground_dot.png'}),
-	Icon_gray = new CameraIcon({iconUrl: 'foreground_dot.png'});
+	var Icon_red = new CameraIcon({iconUrl: 'browndot.png'}),
+	Icon_gray = new CameraIcon({iconUrl: 'browndot.png'});
 
 
 
