--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2674,6 +2674,17 @@
       <td>Beijing, Gansu, Guangdong, Guangxi, Guizhou, Heilongjiang, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Institute of Chartered Shipbrokers</td>
+      <td>英国皇家特许船舶经纪协会</td>
+      <td>Shanghai Commission of Transport</td>
+      <td>上海市交通委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-10-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Institute of Management Accountants</td>
       <td>美国管理会计师协会</td>
       <td>Ministry of Finance</td>
@@ -4828,6 +4839,17 @@
       <td>Chongqing</td>
       <td>2020-08-13</td>
       <td>Chongqing</td>
+    </tr>
+    <tr>
+      <td>Singapore Chinese Chamber of Commerce and Industry</td>
+      <td>新加坡中华总商会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Singapore</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-10-14</td>
+      <td>Anhui, Beijing, Fujian, Guangdong, Hainan, Hebei, Heilongjiang, Henan, Jiangsu, Jilin, Liaoning, Shandong, Shanghai, Tianjin, Zhejiang</td>
     </tr>
     <tr>
       <td>Singapore International Arbitration Centre (SIAC)</td>
