--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Facial Recognition Cameras in Xiqiao Town, Nanhai District, Foshan City, Guangdong Province</title>
+  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -359,8 +359,10 @@
 			<tr>
 					<td valign="top">
 	<div id="wrapper">
-	<div id="H1" class='h1'>Placeholder Title</div>
-	<div id="H2" class='h2'>Lorem50 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
+	<div id="H1" class='h1'>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</div>
+	<div id="H2" class='h2'>ChinaFile created this interactive map using the proposed locations for 254 facial recognition cameras listed along with their geographic coordinates in a 2019 procurement notice from the town of Xiqiao. We then applied Xiqiao’s own “four basic needs” and “five quality-of-life needs” rubric to the data, classifying locations into one of nine categories. </br></br>
+Click on any dot to see what type of location it is and to read the original Chinese text describing it. Click on the buttons to filter your view by Xiqiao’s hierarchy of human needs.
+</div>
 	<div id="buttons" class="btn-group">
 			<button id="all" class="all">All</button>
 			<button id="housing" class="all">Housing</button>
@@ -381,7 +383,7 @@
 </tr>
 <tr>
 <td valign="bottom">
-		<div id="H3" class='h3'>Probably some notes here about why we only have one thing for clothing.</div>
+		<div id="H3" class='h3'>ChinaFile was unable to determine the type of certain “markets” listed, for instance whether they sold food, clothing, or other products. These markets are categorized as “Other/unknown.” Large shopping malls are categorized as “Entertainment.”</div>
 </td>
 </tr>
 </table>
