--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -30,7 +30,7 @@
 
 		.h1 {
 		max-width: 700;
-		font-size: 24px;
+		font-size: 20px;
 		font-family: Georgia, Times, "Times New Roman", serif;
 		font-style: normal;
 		font-variant: normal;
@@ -44,14 +44,14 @@
 		}
 		.h2 {
 		max-width: 700;
-		font-size: 16px;
+		font-size: 14px;
 		font-family: Georgia, Times, "Times New Roman", serif;
 		/* font-style: normal;
 		font-variant: normal; */
 		color: #000000;
 		background-color: #FFFFFF;
 		display: inline-block;
-		text-align: center;
+		text-align: left;
 		margin: auto;
 		padding-top:  10px;
 		padding-bottom:  25px;
@@ -66,7 +66,7 @@
 		font-variant: normal;
 		color: #000000;
 		background-color: #FFFFFF;
-		text-align: center;
+		text-align: left;
 		margin: auto;
 		padding-top:  20px;
 		padding-bottom:  25px;
@@ -360,7 +360,7 @@
 					<td valign="top">
 	<div id="wrapper">
 	<div id="H1" class='h1'>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</div>
-	<div id="H2" class='h2'>ChinaFile created this interactive map using the proposed locations for 254 facial recognition cameras listed along with their geographic coordinates in a 2019 procurement notice from the town of Xiqiao. We then applied Xiqiao’s own “four basic needs” and “five quality-of-life needs” rubric to the data, classifying locations into one of nine categories. </br></br>
+	<div id="H2" class='h2'><p>ChinaFile created this interactive map using the proposed locations for 254 facial recognition cameras listed along with their geographic coordinates in a 2019 procurement notice from the town of Xiqiao. We then applied Xiqiao’s own “four basic needs” and “five quality-of-life needs” rubric to the data, classifying locations into one of nine categories.</p>
 Click on any dot to see what type of location it is and to read the original Chinese text describing it. Click on the buttons to filter your view by Xiqiao’s hierarchy of human needs.
 </div>
 	<div id="buttons" class="btn-group">
