--- a/viz/surveillance/Beijing_camera_table.html
+++ b/viz/surveillance/Beijing_camera_table.html
@@ -7,6 +7,15 @@
 
 
 <style>
+#wrapper{
+	margin-right: auto; /* 1 */
+	margin-left:  auto; /* 1 */
+	max-width: 750px; /* 2 */
+	padding-right: 10px; /* 3 */
+	padding-left:  10px; /* 3 */
+	padding-bottom:  10px;
+	padding-top: 10px;
+}
         table.tableizer-table thead {
             background-color:#ebeff1;
             color:#000000;
@@ -47,7 +56,7 @@
   </head>
 
   <body>
-
+<div id="wrapper">
 
 <!–– add your tableizer data below this line––>
 
@@ -72,5 +81,7 @@
 
 
 <!–– add your tableizer data above this line––>
+
+</div>
 </body>
 </html>
