--- a/viz/surveillance/Beijing_camera_table.html
+++ b/viz/surveillance/Beijing_camera_table.html
@@ -10,11 +10,18 @@
 #wrapper{
 	margin-right: auto; /* 1 */
 	margin-left:  auto; /* 1 */
-	max-width: 750px; /* 2 */
-	padding-right: 10px; /* 3 */
-	padding-left:  10px; /* 3 */
-	padding-bottom:  10px;
-	padding-top: 10px;
+	max-width: 700px; /* 2 */
+	padding-right: 5px; /* 3 */
+	padding-left:  5px; /* 3 */
+	padding-bottom:  5px;
+	padding-top: 5px;
+}
+#body {
+	display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+padding: 0;
+margin: 0;
 }
         table.tableizer-table thead {
             background-color:#ebeff1;
