--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -175,6 +175,55 @@
 
 
 
+		@media screen and (max-width: 750px) {
+			#buttons{
+				margin-left: calc((100% - 615px)/2);
+				padding:5px;
+				padding-top: 0px;
+				padding-right: 10px;
+				/* margin:5px; */
+			}
+			button {
+					width: 120px;
+					margin: auto;
+					margin-bottom: 5px;
+					/* background-color: white; */
+					/* background-color: orange; */
+					color: black;
+					font-size: 10px;
+					/* border: 1px solid #d8d8d8; */
+					/* border-radius: 4px; */
+					transition-duration: 0.3s;
+					display: inline;
+			}
+			#map {
+				height:auto;
+				min-height: 50vh;
+				width: 615px;
+				/* width: 90vw; */
+				padding-top:  20px;
+				margin-left: calc((100% - 615px)/2 + 6px);
+				clear:right;
+			}
+			#points{
+				/* padding-left:  5px; */
+				padding-top: 10px;
+				padding-bottom: 5px;
+				margin-left: calc((100% - 615px)/2);
+				float:left;
+				font-size: 13px;
+				font-style: italic;
+				color: gray;
+			}
+		}
+
+
+
+
+
+
+
+
 		@media screen and (max-width: 700px) {
 			#buttons{
 				margin-left: calc((100% - 615px)/2);
