--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
+  <title>1Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -395,6 +395,49 @@
 			}
 		}
 
+
+
+		@media only screen and (max-width: 486px) {
+			#buttons{
+				margin-left: calc((100% - 240px)/2);
+				padding:5px;
+				padding-top: 0px;
+				padding-right: 10px;
+				/* margin:5px; */
+			}
+			button {
+	        width: 140px;
+					margin: auto;
+					margin-bottom: 5px;
+					/* background-color: white; */
+					/* background-color: orange; */
+	  			color: black;
+					font-size: 10px;
+					/* border: 1px solid #d8d8d8; */
+					/* border-radius: 4px; */
+					transition-duration: 0.3s;
+					display: inline;
+	    }
+			#map {
+				height:auto;
+				min-height: 50vh;
+				width: 240px;
+				/* width: 90vw; */
+				padding-top:  20px;
+				margin-left: calc((100% - 240px)/2 + 6px);
+				clear:right;
+			}
+			#points{
+				/* padding-left:  5px; */
+				padding-top: 10px;
+				padding-bottom: 5px;
+				margin-left: calc((100% - 240px)/2);
+				float:left;
+				font-size: 13px;
+				font-style: italic;
+				color: gray;
+			}
+		}
 
 
 
