--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>2Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
+  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
