--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>1Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
+  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -467,7 +467,7 @@
 			#map {
 				height:auto;
 				min-height: 50vh;
-				width: 210px;
+				width: 240px;
 				/* width: 90vw; */
 				padding-top:  20px;
 				margin-left: calc((100% - 240px)/2 + 6px);
