--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
+  <title>1Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -445,7 +445,7 @@
 
 		@media only screen and (max-width: 440px) {
 			#buttons{
-				margin-left: calc((100% - 240px)/2);
+				margin-left: calc((100% - 390px)/2);
 				padding:5px;
 				padding-top: 0px;
 				padding-right: 10px;
@@ -466,18 +466,22 @@
 	    }
 			#map {
 				height:auto;
-				min-height: 50vh;
-				width: 240px;
+				min-height: 30vh;
+				/* min-height: 50vh;  */
+
+				width: 390px;
+				/* width: 240px; */
+
 				/* width: 90vw; */
 				padding-top:  20px;
-				margin-left: calc((100% - 240px)/2 + 6px);
+				margin-left: calc((100% - 390px)/2 + 6px);
 				clear:right;
 			}
 			#points{
 				/* padding-left:  5px; */
 				padding-top: 10px;
 				padding-bottom: 5px;
-				margin-left: calc((100% - 240px)/2);
+				margin-left: calc((100% - 390px)/2);
 				float:left;
 				font-size: 13px;
 				font-style: italic;
