--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark_iceblue.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
+  <title>1Location of Proposed Facial Recognition Cameras in Xiqiao Township, Guangdong Province</title>
   <link rel="stylesheet" href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.css" />
   <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -469,7 +469,7 @@
 				min-height: 30vh;
 				/* min-height: 50vh;  */
 
-				width: 390px;
+				width: 370px;
 				/* width: 240px; */
 
 				/* width: 90vw; */
