--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -364,6 +364,17 @@
       <td>Anhui, Beijing, Chongqing, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Hubei, Hunan, Jiangsu, Jiangxi, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>ASOEX</td>
+      <td>智利水果出口商协会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>Chile</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-11-03</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Association For Manufacturing Technology (AMT)</td>
       <td>机械制造技术协会</td>
       <td>Beijing Commission of Science and Technology</td>
@@ -3782,6 +3793,17 @@
       <td>Civil Society Capacity-Building, Disaster Relief, International Relations/Exchange, Poverty Alleviation</td>
       <td>Beijing</td>
       <td>2018-02-09</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Million Dollar Round Table (MDRT)</td>
+      <td>百万圆桌（美国）</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>United States</td>
+      <td>Economic Development, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-11-03</td>
       <td>China</td>
     </tr>
     <tr>
